--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,6 +6,8 @@ engines:
       ignore_warnings: true
   fixme:
     enabled: true
+  phpmd:
+    enabled: true
 ratings:
   paths:
     - "src/**.php"
